--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-streamlit
-requests
-beautifulsoup4
-pandas
-google-cloud-bigquery
-google-auth
-google-auth-oauthlib
+streamlit>=1.28.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+pandas>=2.1.0
+numpy>=1.24.0
+google-cloud-bigquery>=3.11.0
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+vaderSentiment>=3.3.2
+statsmodels>=0.14.0
+plotly>=5.13.0
+python-dateutil>=2.8.2
