--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-streamlit==1.28.0
-pandas==2.1.0
-numpy==1.24.0
-requests==2.31.0
-beautifulsoup4==4.12.0
-google-cloud-bigquery==3.11.0
-google-auth==2.23.0
-vaderSentiment==3.3.2
-statsmodels==0.14.0
-plotly==5.13.0
-db-dtypes==1.1.1
+streamlit>=1.37.1
+pandas>=2.2.2
+numpy>=1.26.0
+requests>=2.32.3
+beautifulsoup4>=4.12.3
+google-cloud-bigquery>=3.25.0
+google-auth>=2.33.0
+google-auth-oauthlib>=1.2.1
+protobuf>=5.27.3
+db-dtypes>=1.1.1
+plotly>=5.18.0
+vaderSentiment>=3.3.2
+statsmodels>=0.14.0
